# libaudioDB-haskell

./: AudioDB.cabal  README.md
src/: ADB.hsc  ADBCLI.hs  AudioDB.hs
src/AudioDB/: API.hsc
src/Sound/Audio/: Database.hs  Features.hs
src/Sound/Audio/Database/: Ingest.hs  Query.hs  Types.hs
src/Sound/Audio/Features/: ReadCSV.hs
tests/: ADBTest.hs  AudioDBTest.hs
