name: AudioDB
version: 0.1
synopsis: Bindings to the libaudioDB feature database
homepage: http://code.ismsgroup.net/audiodb/haskell/
author: Richard Lewis
build-type: Simple
cabal-version: >= 1.8

library
  build-depends: base, filepath, vector, containers, parsec, MissingH
  exposed-modules: AudioDB, MediaCollection
  other-modules: ADB
  hs-source-dirs: src
  include-dirs: include
  ghc-options: -Wall

executable test
  build-depends: base, vector
  main-is: ADBTest.hs
  hs-source-dirs: tests
  other-modules: ADB
  hs-source-dirs: src
  include-dirs: include
  ghc-options: -Wall
  extra-libraries: audioDB

executable audiodb-test
  build-depends: base, vector, parsec, MissingH, filepath
  main-is: AudioDBTest.hs
  hs-source-dirs: tests
  other-modules: AudioDB, ADB
  hs-source-dirs: src
  include-dirs: include
  ghc-options: -Wall
  extra-libraries: audioDB

executable adb
  build-depends: base, filepath, vector, parsec, MissingH, AudioDB
  main-is: ADBCLI.hs
  hs-source-dirs: src
  include-dirs: include
  other-modules: ADB
