name: AudioDB
version: 0.1
synopsis: Bindings to the libaudioDB feature database
homepage: https://github.com/TransformingMusicology/libaudioDB-haskell
author: Richard Lewis
license: GPL
copyright: (C) 2014, 2015 Richard Lewis
build-type: Simple
cabal-version: >= 1.8

library
  build-depends: base, filepath, vector, containers, parsec, MissingH
  exposed-modules: Sound.Audio.Database, Sound.Audio.Database.Ingest, Sound.Audio.Database.Query, Sound.Audio.Database.Types, Sound.Audio.Features, Sound.Audio.Features.ReadCSV
  other-modules: AudioDB.API
  hs-source-dirs: src
  ghc-options: -Wall

executable adb-test
  build-depends: base, vector
  main-is: ADBTest.hs
  other-modules: AudioDB.API
  hs-source-dirs: tests, src
  ghc-options: -Wall
  extra-libraries: audioDB

executable audiodb-test
  build-depends: base, vector, parsec, MissingH, filepath, AudioDB
  main-is: AudioDBTest.hs
  hs-source-dirs: tests
  ghc-options: -Wall
  extra-libraries: audioDB
